# xray_server_api

./: README.md  autoinstall_xray_api.sh  pyproject.toml
app/: main.py
app/data/: configuration.py
app/xray/: credentials_generator.py  xray_configuration.py
