[tool.poetry]
name = "vpnizator-xray-api"
version = "0.1.0"
description = "API для взаимодействия с Xray сервером"
authors = ["Ardgellan <aegiev01@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.115.4"
uvicorn = "^0.32.0"
httpx = "^0.27.2"
loguru = "^0.7.2"
python-dotenv = "^1.0.1"
requests = "^2.32.3"
emoji-country-flag = "^2.0.1"


[tool.poetry.group.dev.dependencies]
black = "^24.10.0"
flake8 = "^7.1.1"
isort = "^5.13.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
